--- a/gb/ncid281_3.md
+++ b/gb/ncid281_3.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/9/26/n11549133.md#1" target="_blank">说米兰是国家“火箭少女101”孟美岐惹争议</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/9/26/n11549133.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/meng-meiqi_meitu_1-150x120.jpg" align ="left"></a>因选秀出道的大陆组合“火箭少女101”成员孟美岐，参演的电影《诛仙》自本月中旬上映后，演技被中共央视点名批评“太差”，随后又被质疑拍戏时使用替身。风波还没过去，近日她又因说米兰是国家再引争议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月27日 9:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/9/26/n11549044.md#1" target="_blank">惊人！一包优质茶叶袋泡出数十亿微塑料</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/9/26/n11549044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Fotolia_128475294_Subscription_Monthly_M-150x120.jpg" align ="left"></a>加拿大麦吉尔大学（McGill University）的一位教授语出惊人，茶叶爱好者在杯中浸泡一袋钟爱的优质茶叶包时，可能会把数十亿微小的塑料颗粒饮入体内。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月27日 4:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/9/24/n11542455.md#1" target="_blank">【拍案惊奇】台湾电影《返校》为何令中共害怕</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/9/24/n11542455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c74235a78b749a_ttl7dayvxr_174e9af355e72509-150x120.jpg" align ="left"></a>台湾电影《返校》反暴政，香港躲、大陆封，电影揭示的恐怖政治，与当今反送中情境极其相似！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:04 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/9/23/n11539504.md#1" target="_blank">揭秘：华人夫妇涉泄密给中共 美国梦变噩梦</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/9/23/n11539504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-75960147-FBI-600x400-150x120.jpg" align ="left"></a>在周宇的脸书账号上，有许多近期的照片，其中一张是今年一月份拍摄的照片，面带微笑的周宇出现在纳斯达克，正准备敲闭市钟，这是他在上市公司Avalon GloboCare Corp的角色之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 11:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/10/26/n11614411.md#1" target="_blank">内蒙女博士宿舍床上放布娃娃被通报 惹议</a><br></h3> 连日来，内蒙古大学一则 “不允许博士研究生宿舍床上有布娃娃，逾期不整改取消奖学金资格 ”的消息，在社交平台上引发了热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 3:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/10/19/n11598939.md#1" target="_blank">福建一幼儿园只招干部子女？被批搞特殊化</a><br></h3>2019年闽南师范大学附属幼儿园招生条件定为“在编在岗的干部其三代以内直系子女”，引发外界引发关注。该校宣传部门称，此条件由芗城区有关部门制定。网民质问：敢利用权力搞特殊化，为什么又不敢面对民众的质询？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/gdjsw246/djy/blob/master/gb/ncid281_3.md#1<br><a href="https://github.com/gdjsw246/djy/blob/master/gb/ncid281_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/gdjsw246/djy/blob/master/gb/ncid281_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid281_3.htm">http://www.epochtimes.com/gb/ncid281_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
