--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/gdjsw246/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gdjsw246/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751906.md#1" target="_blank">台总统辩论29日14点登场 蔡韩宋直接对决</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751906.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e0efaae6822ba9c1df1384a9ad1ea6d0-150x120.jpg" align ="left"></a>2020总统唯一一场由公视举办的总统辩论会29日下午2时登场，总统辩论会协商代表也是民进党立法院党团书记长李俊俋受访表示，政见会与辩论会差异性不大，准备的方式一样，着重于3年的政绩透过辩论会向人民报告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 8:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751793.md#1" target="_blank">美癌症中心高层人事突变 曝光中共何种野心</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751793.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Mckinley-Exterior-640x367-150x120.jpg" align ="left"></a>上周，“H·李·莫菲特癌症中心和研究所”领导层的突然变动震惊了坦帕湾医学界，并迅速促使州议会的议员采取了不寻常的举措开展调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 8:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751850.md#1" target="_blank">中国内衣大王断崖式亏损 4年关店1500家</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751850.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG11488478856-600x400-150x120.jpg" align ="left"></a>形象代言人关晓彤取代林志玲后，都市丽人一路下滑的业绩并没有好转。这家“中国内衣第一股”近日在公布盈利警示后，股价一度大跌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751781.md#1" target="_blank">【热点互动】松绑户籍防范失业潮 危机来临？</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751781.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e49b8ceefca90a_ttl7dayeHb_2e91dbafacd0ce1d-150x120.jpg" align ="left"></a>近日中共高层发布通知，宣布将全面取消常驻人口3百万以下人口的落户限制，这意味着中国绝大多数城市将没有户口制度。中共松绑户籍制度：城市户口还有多大吸引力？
+另一方面，总理李克强近日签发文件，要求各地防范规模性失业潮，以及有此可能引发的突发群体事件。那么中共为什么在此时大幅松绑户籍制度？中国的经济和就业形势有多严峻？国务院紧急发文防范突发群体事件！今晚我们请来.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751771.md#1" target="_blank">美参院两党有望快速解决弹劾川普案</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751771.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-915509086-150x120.jpg" align ="left"></a>美国会参议院有望在快速解决弹劾总统川普（特朗普）案上达成第一步的共识。过去数周共和党参议员的公开发言看，绝大多数共和党参议员赞成快速审讯弹劾案、证明总统无罪；同时，民主党领袖表示，他们希望公正、迅速审讯弹劾案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 6:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751783.md#1" target="_blank">台湾大选前夕 中共出动航母后又立法利诱</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6caac0d024d804f1d488d9e9c5cb7ad4-150x120.jpg" align ="left"></a>台湾总统大选前夕，中共出动航母穿越台湾海峡，并利用地下赌盘、媒体以及出台有关“法律”等方式，企图影响台湾大选。但外界认为，中共越企图影响台湾大选，越引发台人的反感，中共越适得其反。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 5:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751714.md#1" target="_blank">【新闻看点】危机来了？官称过紧日子及防暴动</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751714.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/12/612010729281897-150x120.jpg" align ="left"></a>在昨天（12月27日）结束的全国财政工作会议上，中共财政部长刘昆呼吁，要树立“过紧日子”的思想。圣诞节前夕，中共国务院还发文要求各地区“第一时间处置因规模性失业引发的群体性突发事件”。2020年中共的危机要来了。
+一系列的迹象显示，2020年消灭贫困县、所有贫穷人口实现脱贫仅仅是个“梦”。而实际上，2020年中共的危机已经来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 5:01 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751676.md#1" target="_blank">曹兴诚批九二共识胡说八道 专家赞他有勇气</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751676.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/37c7dd6d1dd565c1881e2fa0a03d087a-150x120.jpg" align ="left"></a>联电荣誉董事长曹兴诚表示，“九二共识、一中各表”，根本就是胡说八道。“中共怎会同意一中可以各表？”台湾投资中国受害者协会理事长高为邦说，“曹兴诚批‘九二共识’说的对，他有勇气。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751733.md#1" target="_blank">中共利用社媒攻击他国 专家：像个巨魔</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1601290615221770-150x120.jpg" align ="left"></a>2019年，虽然是中共建政以来最内外交迫的一年。然而，北京领导人不思转变，反而更加控制人民，并利用社交媒体指责西方国家以及试图重建形象。专家说，这让中共看起来更像个巨魔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/16/n11724729.md#1" target="_blank">大国竞争？美军火速打造超火力超射程武器</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/16/n11724729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/TACM-1200x800-150x120.jpg" align ="left"></a>几十年来，美国的移动飞机场——航空母舰和各地空军基地一直代表着美国外交政策的实力。近年来，中俄积聚数百甚至数千英里射程的导弹系统造成新挑战，美军需要新型武器对抗这种新威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751657.md#1" target="_blank">美学者：抵御中共长臂 捍卫校园言论自由</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751657.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1301262227271528-150x120.jpg" align ="left"></a>美国学者认为，美国各大学应率先抵抗中共侵犯美国利益的行为，采取行动维护校园言论自由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 2:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751566.md#1" target="_blank">中共两省军区政委突然被免全国人大代表资格</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751566.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1401220857431944-150x120.jpg" align ="left"></a>中共两名少将——江苏省军区政委孟中康、海南省军区政委叶青，突然被免去中共全国人大代表职务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 11:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/26/n11747468.md#1" target="_blank">【2019盘点】中国经济十大困局</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/26/n11747468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/ChinaEconomy-150x120.jpg" align ="left"></a>回首2019，在日益升级的中美贸易战以及日渐蔓延的债务违约的炮火、爆雷声中，中国经济步履蹒跚，在中共债务经济的泥沼中愈陷愈深。从房市、股市到债市，从出口、消费到投资，各个经济领域都是困局难解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:31 PM							</td></tr>
@@ -13,25 +25,11 @@
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750889.md#1" target="_blank">被指垄断 丰田汽车被中共罚款8761万</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750889.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_101986585-150x120.jpg" align ="left"></a>丰田汽车（中国）投资有限公司被中共指责涉垄断，日前被罚款8761.3万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750751.md#1" target="_blank">中共批台大开民主倒车 学者讥中国有民主？</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750751.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/c369fca47693132d48911e39739a0252-150x120.jpg" align ="left"></a>中共国台办反对中华民国立法院通过“反渗透法”，还说这是“大开民主倒车”。对此，台湾师范大学政治学系教授范世平《反渗透法》12月27日嘲讽“中共这么关心台湾的民主？中国自己有民主吗？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 1:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750541.md#1" target="_blank">中国外债达到2万亿美元 创新高</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1312310333481528-600x400-150x120.jpg" align ="left"></a>12月27日，中共国家外汇管理局公布了2019年9月末中国全口径外债数据，数据显示，截至9月底，中国全口径(含本外币)外债余额为2.0325万亿美元，再次创下新高。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:57 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750404.md#1" target="_blank">日大型钢企“日本制铁”计划关闭大陆工厂</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/07/80730213859836-150x120.jpg" align ="left"></a>日本大型钢铁公司“日本制铁”（Nippon Steel）计划停止其子公司在中国浙江的特殊钢生产，并考虑关闭在浙江的工厂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:51 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750070.md#1" target="_blank">中国年轻人债台高筑 为何中共最不乐见</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/11/711260141191508-150x120.jpg" align ="left"></a>中国年轻世代的个人信用恶化，可能是中共最不乐见的一件事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750707.md#1" target="_blank">传习近平不满北京官方 中南海收回规划权</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1302060733482068-600x400-150x120.jpg" align ="left"></a>在中共官方最近一次涉及北京规划的会议上，中共办公厅主任丁薛祥首次以首规委主任的身份公开露面。这也显示中共明确北京规划权属中南海。有港媒解读认为，此举暗示中央对北京官方感到不满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750678.md#1" target="_blank">夏小强：台总统候选人政见会结束 大势已定</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750678.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7d4918c181bda077e56ad46a496f592c-150x120.jpg" align ="left"></a>12月27日，2020年中华民国总统选举第三场候选人政见会在台视举行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750395.md#1" target="_blank">贸易战暂休战 美中经济关系仍会部分脱钩</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750395.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1082174058-3-150x120.jpg" align ="left"></a>尽管美中贸易战因第一阶段协议的达成而暂时消停，但这并不表明华盛顿及北京的关系会越来越紧密，相反，在部分议题上可能会逐步走向分离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 7:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750093.md#1" target="_blank">小苹果为醒醒唱生日歌 章子怡汪峰赞美妙动听</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG31N1183921600-150x120.jpg" align ="left"></a>12月27日，章子怡在微博晒出汪峰的大女儿“小苹果”为“醒醒”唱生日歌的视频，并配文：“姐姐送给醒宝的生日礼物，太动听了，爱姐姐，醒醒好幸福！”
-
-视频中，亭亭玉立的“小苹果”拿着话筒，全神贯注地地用和声唱着英文版的生日快乐歌，还将歌词加上了“醒醒”的名字。其歌声婉转清脆，几个高音被轻松拿下，颇显唱功。
-
-在视频的几个画面中，还打出了祝福语：“祝醒宝.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 7:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11749953.md#1" target="_blank">首导片《后来的我们》胜诉 刘若英喊理直气壮</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11749953.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/liuruoying-150x120.jpg" align ="left"></a>艺人刘若英（昵称奶茶）导演的首部电影《后来的我们》，在大陆上映后获得13.61亿人民币（约合63亿台币）的票房，但该片在今年1月遭大陆某公司提告侵权并被索赔7,000万元人民币（约合3.1亿台币）。时隔近一年，刘若英所在方日前表示“胜诉”，她本人27日也在微博贴出法院的判决书时配文道：“《后来的我们》理直气壮！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 7:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11749809.md#1" target="_blank">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11749809.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1705150416581487-150x120.jpg" align ="left"></a>12月25日圣诞夜，大陆歌手李荣浩在突然在微博发文：“人的坏有底线吗？没有。”自问自答的他让很多粉丝相当心疼，也引来歌手邓紫棋用歌词回应：“谁迷失在水泥的森林里？谁一直踩最低的人性底线？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 7:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750108.md#1" target="_blank">【新闻看点】台大选前 中共出动航母文攻武吓</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750108.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/1801310135262378-150x120.jpg" align ="left"></a>距离台湾总统大选还有半个月的时间，中共出动航母航经台湾海峡。不过就在这艘被中共猛吹的“山东号”招摇过市前夕，美国媒体已经揭了它的老底儿：没有正规作战能力，很可能只是“漂浮的纸老虎”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/24/n11743793.md#1" target="_blank">【独家】大陆医生亲历不寻常器官移植手术（上）</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/24/n11743793.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/de728b88a79a29f47092b84533d848c7-150x120.jpg" align ="left"></a>“刚将前期准备做好，肝源就来了。一切好像就是安排得井然有序。”2011年的一个深夜，浙江大学附属医院的钟医生（化名）参加了一台肝移植手术，当晚以及“翻墙”后的所见所闻，令当时还是实习医生的他从此远离器官移植。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750187.md#1" target="_blank">复旦等校改章程 美大学忧中共控制学术自由</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/27/n11750187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/FuDanUni-1-150x120.jpg" align ="left"></a>美国大学正在密切关注中国大学修改章程一事，他们担心这是中共当局限制学术自由的开始，可能影响到他们在中国设置的十几个分支机构。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751864.md#1" target="_blank">内蒙古公安警官枪杀两副局长 当局封口</a><br></h3>圣诞节当日，大陆内蒙古一森林公安局的警官突然枪击5名同事，致其中两名副局长身亡。中共公安部和内蒙古当局派人进驻当地调查，并全面封锁消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751457.md#1" target="_blank">曾陷冤狱7年 法轮功学员赵吉元再遭冤判</a><br></h3>曾陷冤狱7年的辽宁省沈阳市大东区法轮功学员赵吉元，于7月10日再度被绑架，近日被沈阳市和平区法院非法判刑7年半。赵吉元已上诉到中级法院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 2:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750592.md#1" target="_blank">【翻墙必看】中共到了最后解体的时刻？</a><br></h3>不久前，美国国际宗教自由委员会委员鲍尔说：“我们收到中共政府内乱和中国一些地区反对中共政权的报告。”鲍尔认为，中共的解体可能以非常快的速度发生。那么，中共真的到了最后解体的时刻吗？答案是肯定的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/26/n11747235.md#1" target="_blank">甘肃庆阳市法轮功学员被迫害情况综述（上）</a><br></h3>20年来，据不完全统计，甘肃庆阳市一千多位修炼者遭到残酷的迫害，其中，被迫害致死或迫害离世30人，被非法判刑的77人次，被非法劳教的70多人次，遭到非法关押、刑事拘留的及传唤的500多人次，被非法开除公职的17人，被警察等抢去的钱财达几百万元之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751269.md#1" target="_blank">贪污逾千万元 内蒙古通辽政协高官获刑17年</a><br></h3>12月28日，中共内蒙古通辽市政协前副主席吴国林（副厅级）被判刑17年。其被指贪污逾千万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751100.md#1" target="_blank">河北公务员骗取养老金7千万 用于个人挥霍</a><br></h3>中共河北省人力资源和社会保障厅养老计发处原工作人员邓绍中贪污案的细节被曝光，指其用非法手段骗取养老金7000万余元（人民币，下同），大部分用于个人挥霍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:32 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11750711.md#1" target="_blank">每日三退声明精选（2019/12/27）</a><br></h3>我是一名普通的企业员工，10多年前领导让我加入中共邪党，我没有答应。因为我深知恶党的邪恶，心里深深的抵触它。今年在我不知情的情况下，领导开会通过了我入党的决定。事后以政治任务通知我参加学习，我内心无比痛苦，不想加入这邪恶的组织。现在我郑重提出退出中国共产邪党、中国共青团、中国少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 11:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/gdjsw246/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/gdjsw246/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
