--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,7 +7,7 @@
 <a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br>
 <a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
-<a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/28/n11751714.md#1">【新闻看点】危机来了？官称过紧日子及防暴动</a><br>
+<a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
 <br><p><a href="https://github.com/gdjsw246/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/31/n11756696.md#1">夏小强：从天命看韩国瑜选举总统的预兆</a><br>
 <a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/31/n11756620.md#1">袁斌：2019年，满盘皆输的中共</a><br>
