--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/16/n11726202.md#1" target="_blank">心灵升华 屏东法轮功学员见证大法美好</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/16/n11726202.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6802f02582738fc5deb1bd4b7dd45d74-150x120.jpg" align ="left"></a>历经二十载的反迫害，全世界的法轮功学员不畏寒暑一直坚持告诉大陆游客及社会各界，中共打压法轮功、活摘器官等真相，劝三退，并且传扬大法的美好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 1:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/17/n11727220.md#1" target="_blank">美5岁女童义卖饼干 帮123名学童缴午餐费用</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/17/n11727220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-2763347-150x120.jpg" align ="left"></a>美国加州一名5岁女童将义卖饼干与饮料的所得捐出，帮负担不起营养午餐的学童缴清费用，一共有123名学童因此而免于捱饿。此一善举获得该女童就读学校的褒奖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 1:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/9/n11710360.md#1" target="_blank">天地清明引(139) 东流水－浩然正气4</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/9/n11710360.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/4325af0fb8983b64fd5334fb52749c7c-150x120.jpg" align ="left"></a>话说纳兰被皇甫急召入宫，郭络罗略述原委。玉林风尘仆仆，不及卸甲弃刃，回禀详情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/18/n11730570.md#1" target="_blank">歌词：这里，那里（二）</a><br></h3> 春在玛瑙里， 夏在翡翠里， 秋在金籽里， 冬在璧玉里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/11/6/n11637304.md#1" target="_blank">【三国英雄】之五：曹操首兴义兵（文字版）</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/11/6/n11637304.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/5-6-150x120.jpg" align ="left"></a>面对汉朝国贼董卓，反董联军却没一个进攻董卓的，面对国难，曹操的选择又是什么？曹操的好朋友，反董联军的盟主袁绍不打董卓，究竟在忙什么呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/18/n11730550.md#1" target="_blank">五律：情</a><br></h3> 直教从死生，客雁古留声。 尘界神长在，世缘人未明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/17/n11728493.md#1" target="_blank">新诗：哭泣</a><br></h3> 水经浅滩的呜咽 是河流的哭泣 叶枯寒枝的呜咽 是树木的哭泣 内心深处的呜咽......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/16/n11726292.md#1" target="_blank">五绝：灯雪</a><br></h3> 日暮京城冷，纷飞大雪扬。 翩翩灯溢彩，玉落舞芳香。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:21 PM			</td></tr>
