--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757360.md#1">洪微：中共新军事战略受挫</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757068.md#1">王友群：面对“八国联军”清军为何兵败如山倒</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756696.md#1">夏小强：从天命看韩国瑜选举总统的预兆</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756620.md#1">袁斌：2019年，满盘皆输的中共</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754433.md#1">俞晓薇：明慧新年祝福值得中国和世界深思</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754348.md#1">明智：浅评香港连续剧《再向虎山行》</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754077.md#1">东方觉：杀妻骗保为何在中国大陆如此“疯行”</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
