--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -11,7 +11,7 @@
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757360.md#1">洪微：中共新军事战略受挫</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757068.md#1">王友群：面对“八国联军”清军为何兵败如山倒</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756696.md#1">夏小强：从天命看韩国瑜选举总统的预兆</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756696.md#1">夏小强：从天命看韩国瑜能否当选总统</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756620.md#1">袁斌：2019年，满盘皆输的中共</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756476.md#1">谭笑飞：2020，中共向地狱裸奔</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756526.md#1">吴芬湘：川普弹劾案年终总结——了解动机见真相</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,009,738 人
+- 共 349,014,330 人
 ```
 </strong>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
