--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -20,7 +20,17 @@
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747307.md#1" target="_blank">周晓辉： 川习再次会面与英国预言家的预言</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747307.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_145654088_Subscription_L-600x400-1-150x120.jpg" align ="left"></a>12月24日耶诞节的前一天，美国总统川普（特朗普）在佛州海湖庄园通过视频向美军官兵祝贺节日后，有记者问他是否会与习近平举行仪式签署美中贸易协定。川普回应道：“是的，我们将会有签字仪式。”“最终我们会见面，而且会有一个更快的签字，因为我们希望完成它（协议）。协议已经达成了，现在正在翻译。”
 
 川普没有说明他将与习近平.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:53 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11745899.md#1" target="_blank">美国故事：阶前万里 古罗马文明在北美</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11745899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-91459118-1-150x120.jpg" align ="left"></a>美国总统川普不久前说：美国和意大利享有共同的文化和政治遗产，可追溯到几千年前的古罗马。意大利人以其宏伟的艺术、科学、哲学、建筑和音乐作品，创造和保存了我们的文明。美国和意大利从这份文化遗产中汲取力量。美国成立于1776年，古罗马帝国始于公元前753年，从文化本源上讲，美国文明是古罗马文明的继承。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 2:36 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752348.md#1" target="_blank">云鹤天：《忆秦娥?娄山关》新解</a><br></h3>狂风烈，
+腥风血雨香江夜。
+香江夜，
+铁蹄声碎，
+江河呜咽。
+
+红魔赤鬼冷如铁，
+公安武警开杀戒。
+开杀戒，
+怒潮如海，
+心在流血。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752328.md#1" target="_blank">海网：户口松绑之来龙去脉</a><br></h3>户口松绑策，自吹新改革。实乃无奈举，末日苟延辙。
 别的先不扯，先说最直接。城镇多鬼城，韭菜园散零。
 并村撤乡镇，又松户籍绳。空房罗雀筐，楼盘韭菜场。
