--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,10 +7,9 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758833.md#1">金言：2019年末 武汉再现惊魂噩梦</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758681.md#1">周晓辉：习发贺词 2020说新年快乐有些沉重</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758706.md#1">张林：共军在朝鲜战争中丧生两百万（1）</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758622.md#1">颜丹：中共“放开落户”无关迁徙自由</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757865.md#1">陈思敏：中共5G现况虚火过盛</a><br>
@@ -22,6 +21,7 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756526.md#1">吴芬湘：川普弹劾案年终总结——了解动机见真相</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756280.md#1">项云：“密码法”是中共灭亡的心里写照</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756021.md#1">周晓辉：中美高层学习内容亦决定角力结果</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756134.md#1">谢燕益：杨胜军被非法拘禁致死案之紧急报案举报控告函</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
@@ -35,13 +35,13 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757615.md#1">反对反渗透法 台统促党总裁：我就是中共同路人</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758705.md#1">华为：生存是2020第一要务 将淘汰10%主管</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758448.md#1">2019陆企违约逾1400亿 遍及28省 北京最多</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758681.md#1">周晓辉：习发贺词 2020说新年快乐有些沉重</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758506.md#1">台陆委会回击中共：“倒果为因 恶意扭曲”</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758277.md#1">中共统战渗透台湾 六大手段</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758457.md#1">中共机关大院内窝藏卖淫点</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758425.md#1">《大师链》急退台湾市场 分析：反渗透法效果</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758500.md#1">川普：1月15日我在白宫签第一阶段协议</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757755.md#1">“人权与生俱来” 英巴士公司老板赞港人抗争</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758332.md#1">“为新的一年带来希望”神韵旧金山首场爆满</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757910.md#1">反渗透法过关 专家吁加细则阻中共染红媒体</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756981.md#1">法轮大法纽约旗队学员 新年谢师恩</a><br>
