--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -31,7 +31,7 @@
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758455.md#1">【新闻看点】欧盟趋强硬 华为：2020生存第一</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758754.md#1">韩国瑜喊习主席遭打脸 其副手不承认习头衔</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758754.md#1">韩国瑜连喊三声习主席 其副手不承认习头衔</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757615.md#1">反对反渗透法 台统促党总裁：我就是中共同路人</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758705.md#1">华为：生存是2020第一要务 将淘汰10%主管</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758448.md#1">2019陆企违约逾1400亿 遍及28省 北京最多</a><br>
