--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750552.md#1">美国抗共人物系列：亚太助理国务卿史达伟</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758833.md#1">金言：2019年末 武汉再现惊魂噩梦</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758706.md#1">张林：共军在朝鲜战争中丧生两百万（1）</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758622.md#1">颜丹：中共“放开落户”无关迁徙自由</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756526.md#1">吴芬湘：川普弹劾案年终总结——了解动机见真相</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756280.md#1">项云：“密码法”是中共灭亡的心里写照</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756021.md#1">周晓辉：中美高层学习内容亦决定角力结果</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756134.md#1">谢燕益：杨胜军被非法拘禁致死案之紧急报案举报控告函</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
