--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759180.md#1">【名家专栏】川普能让美国“破蛋重圆”吗?</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750552.md#1">美国抗共人物系列：亚太助理国务卿史达伟</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758706.md#1">张林：共军在朝鲜战争中丧生两百万（1）</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758622.md#1">颜丹：中共“放开落户”无关迁徙自由</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756526.md#1">吴芬湘：川普弹劾案年终总结——了解动机见真相</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756280.md#1">项云：“密码法”是中共灭亡的心里写照</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756021.md#1">周晓辉：中美高层学习内容亦决定角力结果</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756134.md#1">谢燕益：杨胜军被非法拘禁致死案之紧急报案举报控告函</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,032,675 人
+- 共 349,037,243 人
 ```
 </strong>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
