--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752142.md#1">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759287.md#1">新年伊始港警射催泪弹 作家邓小桦眼角中弹</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759107.md#1">【拍案惊奇】2020注定不平凡 9件事陪你跨年</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752263.md#1">【2019盘点】华人关注的十大新闻</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758900.md#1">山东偷排污水管深埋入海口 污染令人震惊</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758705.md#1">华为：生存是2020第一要务 将淘汰10%主管</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758448.md#1">2019陆企违约逾1400亿 遍及28省 北京最多</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758681.md#1">周晓辉：习发贺词 2020说新年快乐有些沉重</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758506.md#1">台陆委会回击中共：“倒果为因 恶意扭曲”</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759103.md#1">中共密码法上路 美参议员警告促企业勿配合</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11759016.md#1">海航董事长承认拖欠工资 资金困境未解</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759062.md#1">偷带癌症研究材料出境 中国学生在美被控罪</a><br>
