--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11750092.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/1912290732122188-320x200.jpg">【直播中】2020元旦 港人大游行</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11750092.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/2001010156271501-320x200.jpg">【直播中】2020元旦 港人大游行</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
@@ -9,6 +9,8 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759747.md#1">横河：台湾反渗透法对两岸的冲击</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759583.md#1">【名家专栏】美国真正的“自由红利”是什么</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759180.md#1">【名家专栏】川普能让美国“破蛋重圆”吗?</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750552.md#1">美国抗共人物系列：亚太助理国务卿史达伟</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758681.md#1">周晓辉：习发贺词 2020说新年快乐有些沉重</a><br>
@@ -20,8 +22,6 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756696.md#1">夏小强：从天命看韩国瑜能否当选总统</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756620.md#1">袁斌：2019年，满盘皆输的中共</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756476.md#1">谭笑飞：2020，中共向地狱裸奔</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756526.md#1">吴芬湘：川普弹劾案年终总结——了解动机见真相</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756280.md#1">项云：“密码法”是中共灭亡的心里写照</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -30,9 +30,10 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752142.md#1">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759620.md#1">中央美院教授性骚扰多名女生 校方半年不回应</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759427.md#1">中共两将军辞人大职务 被指“严重违纪”</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759265.md#1">【翻墙必看】2020中共面临“波涛汹涌”</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759674.md#1">1.1大游行 港人挤爆维园 警察截车搜身</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759620.md#1">中央美院教授被举报性骚扰多名女生</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759427.md#1">中共两将军辞人大职务 被指“严重违纪”</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759287.md#1">新年伊始港警射催泪弹 作家邓小桦眼角中弹</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播中】新唐人电视台2020跨年缤纷夜</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759107.md#1">【拍案惊奇】2020注定不平凡 9件事陪你跨年</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758753.md#1">【新闻看点】反渗透法剑指中共 看台湾民主路</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758455.md#1">【新闻看点】欧盟趋强硬 华为：2020生存第一</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758833.md#1">金言：2019年末 武汉再现惊魂噩梦</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758754.md#1">韩国瑜连喊三声习主席 其副手不承认习头衔</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759473.md#1">2020新年首日四川自贡现4.3级地震</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759388.md#1">新年前一天松原现3个“太阳” 网民热议</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759400.md#1">2019岁末 民间记者会给港人的一封信</a><br>
