--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -5,23 +5,23 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745443.md#1">摩托车横穿李克强车队 险酿意外</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760118.md#1">颜智华：北京医生被杀 背后或掩盖医疗黑幕</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759935.md#1">李铭：恭祝李大师新年好 世人感激大法洪恩</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759747.md#1">横河：台湾反渗透法对两岸的冲击</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759583.md#1">【名家专栏】美国真正的“自由红利”是什么</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759180.md#1">【名家专栏】川普能让美国“破蛋重圆”吗?</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750552.md#1">美国抗共人物系列：亚太助理国务卿史达伟</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758833.md#1">金言：2019年末 武汉再现惊魂噩梦</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758681.md#1">周晓辉：习发贺词 2020说新年快乐有些沉重</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758706.md#1">张林：共军在朝鲜战争中丧生两百万（1）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758622.md#1">颜丹：中共“放开落户”无关迁徙自由</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757865.md#1">陈思敏：中共5G现况虚火过盛</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757360.md#1">洪微：中共新军事战略受挫</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757068.md#1">王友群：面对“八国联军”清军为何兵败如山倒</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756696.md#1">夏小强：从天命看韩国瑜能否当选总统</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756620.md#1">袁斌：2019年，满盘皆输的中共</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -30,7 +30,9 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752142.md#1">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759937.md#1">最新解密档案：英方忧97年后共黑合作乱港</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759265.md#1">【翻墙必看】2020中共面临“波涛汹涌”</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759498.md#1">组图：2020港人跨年 港警发射催泪弹</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759674.md#1">1.1大游行 港人挤爆维园 警察截车搜身</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759620.md#1">中央美院教授被举报性骚扰多名女生</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759427.md#1">中共两将军辞人大职务 被指“严重违纪”</a><br>
@@ -40,8 +42,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752263.md#1">【2019盘点】华人关注的十大新闻</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758900.md#1">山东偷排污水管深埋入海口 污染令人震惊</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758753.md#1">【新闻看点】反渗透法剑指中共 看台湾民主路</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758455.md#1">【新闻看点】欧盟趋强硬 华为：2020生存第一</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758833.md#1">金言：2019年末 武汉再现惊魂噩梦</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760052.md#1">上海老妇死于维权路 女儿为母伸冤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759917.md#1">安徽省委巡视组前副组长被判刑10年半</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759473.md#1">2020新年首日四川自贡现4.3级地震</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,046,635 人
+- 共 349,050,127 人
 ```
 </strong>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
